<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".pages.electric.RechardRecordActivity">

    <include
        android:id="@+id/top"
        layout="@layout/title_layout"/>

    <LinearLayout
        android:id="@+id/room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:orientation="vertical"
        android:layout_margin="@dimen/page_magin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/layout_padding"
            android:background="@color/white">
            <TextView
                android:layout_width="@dimen/recharge_form_width"
                android:layout_height="wrap_content"
                android:text="楼栋"
                android:textSize="@dimen/input_text"
                android:textColor="@color/main_text"/>

            <TextView
                android:id="@+id/select_bu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请选择楼栋"
                android:textColorHint="@color/placeholder"
                android:textSize="@dimen/input_text"
                android:textColor="@color/regular_text"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/line"
            android:layout_height="0.5px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/layout_padding"
            android:background="@color/white">
            <TextView
                android:layout_width="@dimen/recharge_form_width"
                android:layout_height="wrap_content"
                android:text="楼层"
                android:textSize="@dimen/input_text"
                android:textColor="@color/main_text"/>

            <TextView
                android:id="@+id/select_floor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="请选择楼层"
                android:textColorHint="@color/placeholder"
                android:textSize="@dimen/input_text"
                android:textColor="@color/regular_text"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:background="@color/line"
            android:layout_height="0.5px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/layout_padding"
            android:background="@color/white">

            <TextView
                android:layout_width="@dimen/recharge_form_width"
                android:layout_height="wrap_content"
                android:text="房间"
                android:textSize="@dimen/input_text"
                android:textColor="@color/main_text"/>

            <AutoCompleteTextView
                android:id="@+id/input_room"
                android:focusable="true"
                android:completionThreshold="1"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="请输入房间号"
                android:textColorHint="@color/placeholder"
                android:textSize="@dimen/input_text"
                android:textColor="@color/regular_text"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/room"
        android:layout_margin="@dimen/page_magin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DCDFE6"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_build_name"
                android:textSize="@dimen/input_text"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_room_name"
                android:textSize="@dimen/input_text"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_name"
                android:textSize="@dimen/input_text"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/str_grade"
                android:textSize="@dimen/input_text"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_class"
                android:textSize="@dimen/input_text"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_recharge_amount"
                android:textSize="@dimen/input_text"/>


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/str_trans_time"
                android:textSize="@dimen/input_text"/>

            <!--TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_status" /-->
        </LinearLayout>

        <ListView
            android:id="@+id/recharge_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</RelativeLayout>